# ray_tracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  aarect.h  box.h  bvh.h  camera.h  constant_medium.h  hitable.h  hitable_list.h  log.h  main.c  main.cpp  main_mc.cpp  material.h  moving_sphere.h  onb.h  perlin.h  plotRays.py  ray.h  sphere.h  stb_image.h  surface_texture.h  texture.h  vec3.h  window.h
